updating form element focus styles; add focus trigger on .input-group elements; fix pre>code overflow on smaller screens; add .sticky, .round, and .square utility classes

--- a/styl/_app-layout.styl
+++ b/styl/_app-layout.styl
@@ -24,9 +24,7 @@ $scrollbar-width    = 15px
 
 
 .app-top-bar
-    position: fixed
     z-index: $zzz
-    top: 0
 
     width: 100%
     // height: $topbar-height
@@ -37,10 +35,7 @@ $scrollbar-width    = 15px
 
 
 .app-sidebar
-    position: fixed
     z-index: $zzzz
-    top: 0
-    left: 0
 
     width: $sidebar-width
     height: 100vh
@@ -62,9 +57,8 @@ $scrollbar-width    = 15px
 
 #main-nav-toggle
     position: absolute
-    right: -3.5rem
+    right: -3rem
     top: 0.8rem
-    padding: 0.35rem 0.8rem
 
 
 .app-logo-container
@@ -87,7 +81,6 @@ $scrollbar-width    = 15px
 
 @media (min-width: $bp-lappy)
     .app-sidebar
-        left: 0
         transform: none
         transition: none
 
