--- a/styl/_app-navbar.styl
+++ b/styl/_app-navbar.styl
@@ -16,7 +16,7 @@ $app-nav-link-color = $black
         color: $app-nav-link-color
         display: block
         padding: 0.5rem 1rem
-        border-left: $mt solid transparent
+        border-left: 3px solid transparent
         text-decoration: none
         transition: all $transition
 
