--- a/styl/_content.styl
+++ b/styl/_content.styl
@@ -69,6 +69,7 @@ $content-margin = $grid-gutter-width
         margin: 0
 
 pre
+    overflow-x: auto
     padding: 0.5rem 1rem
     color: $white
     background-color: #253352
